compilo/sauv1/y.output
Grammaire

    0 $accept: Prg $end

    1 Prg: Fonction Prg
    2    | %empty

    3 Fonction: tInt tId tPo Args tPf Body

    4 Args: %empty
    5     | Arg ListeArgs

    6 ListeArgs: tVir Arg ListeArgs
    7          | %empty

    8 Arg: tInt tId

    9 $@1: %empty

   10 $@2: %empty

   11 Body: tAo $@1 ListeInstr $@2 tAf

   12 ListeInstr: Instr ListeInstr
   13           | %empty

   14 Instr: Decl
   15      | If
   16      | While
   17      | Affect
   18      | Invoc tPv
   19      | Ret

   20 Ret: tReturn Expr tPv

   21 Invoc: tId tPo Params tPf

   22 Params: %empty
   23       | Param
   24       | Param tVir ParamNext

   25 ParamNext: Param
   26          | Param tVir ParamNext

   27 Param: Expr

   28 If: tIf tPo Expr tPf Body
   29   | tIf tPo Expr tPf Body tElse Body

   30 While: tWhile tPo Expr tPf Body

   31 Affect: tId tEq Expr tPv

   32 Expr: Expr tPlus Expr
   33     | tNot Expr
   34     | Expr tInf Expr
   35     | Expr tSup Expr
   36     | Expr tLess Expr
   37     | Expr tDiv Expr
   38     | Expr tStar Expr
   39     | Expr tEq tEq Expr
   40     | Expr tPipe tPipe Expr
   41     | Expr tAnd tAnd Expr
   42     | tPo Expr tPf
   43     | tNb
   44     | tId
   45     | Invoc

   46 Decl: tInt DeclX tPv

   47 DeclX: Decl1
   48      | Decl1 tVir DeclX

   49 Decl1: tId
   50      | tId tEq Expr


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tInt (258) 3 8 46
tId (259) 3 8 21 31 44 49 50
tPo (260) 3 21 28 29 30 42
tPf (261) 3 21 28 29 30 42
tAo (262) 11
tAf (263) 11
tVir (264) 6 24 26 48
tEq (265) 31 39 50
tPlus (266) 32
tLess (267) 36
tStar (268) 38
tPv (269) 18 20 31 46
tPipe (270) 40
tAnd (271) 41
tIf (272) 28 29
tElse (273) 29
tNb (274) 43
tWhile (275) 30
tReturn (276) 20
tNot (277) 33
tInf (278) 34
tSup (279) 35
tDiv (280) 37


Non-terminaux, suivis des règles où ils apparaissent

$accept (26)
    à gauche: 0
Prg (27)
    à gauche: 1 2, à droite: 0 1
Fonction (28)
    à gauche: 3, à droite: 1
Args (29)
    à gauche: 4 5, à droite: 3
ListeArgs (30)
    à gauche: 6 7, à droite: 5 6
Arg (31)
    à gauche: 8, à droite: 5 6
Body (32)
    à gauche: 11, à droite: 3 28 29 30
$@1 (33)
    à gauche: 9, à droite: 11
$@2 (34)
    à gauche: 10, à droite: 11
ListeInstr (35)
    à gauche: 12 13, à droite: 11 12
Instr (36)
    à gauche: 14 15 16 17 18 19, à droite: 12
Ret (37)
    à gauche: 20, à droite: 19
Invoc (38)
    à gauche: 21, à droite: 18 45
Params (39)
    à gauche: 22 23 24, à droite: 21
ParamNext (40)
    à gauche: 25 26, à droite: 24 26
Param (41)
    à gauche: 27, à droite: 23 24 25 26
If (42)
    à gauche: 28 29, à droite: 15
While (43)
    à gauche: 30, à droite: 16
Affect (44)
    à gauche: 31, à droite: 17
Expr (45)
    à gauche: 32 33 34 35 36 37 38 39 40 41 42 43 44 45, à droite:
    20 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 50
Decl (46)
    à gauche: 46, à droite: 14
DeclX (47)
    à gauche: 47 48, à droite: 46 48
Decl1 (48)
    à gauche: 49 50, à droite: 47 48


État 0

    0 $accept: . Prg $end

    tInt  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Prg)

    Prg       aller à l'état 2
    Fonction  aller à l'état 3


État 1

    3 Fonction: tInt . tId tPo Args tPf Body

    tId  décalage et aller à l'état 4


État 2

    0 $accept: Prg . $end

    $end  décalage et aller à l'état 5


État 3

    1 Prg: Fonction . Prg

    tInt  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Prg)

    Prg       aller à l'état 6
    Fonction  aller à l'état 3


État 4

    3 Fonction: tInt tId . tPo Args tPf Body

    tPo  décalage et aller à l'état 7


État 5

    0 $accept: Prg $end .

    $défaut  accepter


État 6

    1 Prg: Fonction Prg .

    $défaut  réduction par utilisation de la règle 1 (Prg)


État 7

    3 Fonction: tInt tId tPo . Args tPf Body

    tInt  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 4 (Args)

    Args  aller à l'état 9
    Arg   aller à l'état 10


État 8

    8 Arg: tInt . tId

    tId  décalage et aller à l'état 11


État 9

    3 Fonction: tInt tId tPo Args . tPf Body

    tPf  décalage et aller à l'état 12


État 10

    5 Args: Arg . ListeArgs

    tVir  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 7 (ListeArgs)

    ListeArgs  aller à l'état 14


État 11

    8 Arg: tInt tId .

    $défaut  réduction par utilisation de la règle 8 (Arg)


État 12

    3 Fonction: tInt tId tPo Args tPf . Body

    tAo  décalage et aller à l'état 15

    Body  aller à l'état 16


État 13

    6 ListeArgs: tVir . Arg ListeArgs

    tInt  décalage et aller à l'état 8

    Arg  aller à l'état 17


État 14

    5 Args: Arg ListeArgs .

    $défaut  réduction par utilisation de la règle 5 (Args)


État 15

   11 Body: tAo . $@1 ListeInstr $@2 tAf

    $défaut  réduction par utilisation de la règle 9 ($@1)

    $@1  aller à l'état 18


État 16

    3 Fonction: tInt tId tPo Args tPf Body .

    $défaut  réduction par utilisation de la règle 3 (Fonction)


État 17

    6 ListeArgs: tVir Arg . ListeArgs

    tVir  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 7 (ListeArgs)

    ListeArgs  aller à l'état 19


État 18

   11 Body: tAo $@1 . ListeInstr $@2 tAf

    tInt     décalage et aller à l'état 20
    tId      décalage et aller à l'état 21
    tIf      décalage et aller à l'état 22
    tWhile   décalage et aller à l'état 23
    tReturn  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 13 (ListeInstr)

    ListeInstr  aller à l'état 25
    Instr       aller à l'état 26
    Ret         aller à l'état 27
    Invoc       aller à l'état 28
    If          aller à l'état 29
    While       aller à l'état 30
    Affect      aller à l'état 31
    Decl        aller à l'état 32


État 19

    6 ListeArgs: tVir Arg ListeArgs .

    $défaut  réduction par utilisation de la règle 6 (ListeArgs)


État 20

   46 Decl: tInt . DeclX tPv

    tId  décalage et aller à l'état 33

    DeclX  aller à l'état 34
    Decl1  aller à l'état 35


État 21

   21 Invoc: tId . tPo Params tPf
   31 Affect: tId . tEq Expr tPv

    tPo  décalage et aller à l'état 36
    tEq  décalage et aller à l'état 37


État 22

   28 If: tIf . tPo Expr tPf Body
   29   | tIf . tPo Expr tPf Body tElse Body

    tPo  décalage et aller à l'état 38


État 23

   30 While: tWhile . tPo Expr tPf Body

    tPo  décalage et aller à l'état 39


État 24

   20 Ret: tReturn . Expr tPv

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 45


État 25

   11 Body: tAo $@1 ListeInstr . $@2 tAf

    $défaut  réduction par utilisation de la règle 10 ($@2)

    $@2  aller à l'état 46


État 26

   12 ListeInstr: Instr . ListeInstr

    tInt     décalage et aller à l'état 20
    tId      décalage et aller à l'état 21
    tIf      décalage et aller à l'état 22
    tWhile   décalage et aller à l'état 23
    tReturn  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 13 (ListeInstr)

    ListeInstr  aller à l'état 47
    Instr       aller à l'état 26
    Ret         aller à l'état 27
    Invoc       aller à l'état 28
    If          aller à l'état 29
    While       aller à l'état 30
    Affect      aller à l'état 31
    Decl        aller à l'état 32


État 27

   19 Instr: Ret .

    $défaut  réduction par utilisation de la règle 19 (Instr)


État 28

   18 Instr: Invoc . tPv

    tPv  décalage et aller à l'état 48


État 29

   15 Instr: If .

    $défaut  réduction par utilisation de la règle 15 (Instr)


État 30

   16 Instr: While .

    $défaut  réduction par utilisation de la règle 16 (Instr)


État 31

   17 Instr: Affect .

    $défaut  réduction par utilisation de la règle 17 (Instr)


État 32

   14 Instr: Decl .

    $défaut  réduction par utilisation de la règle 14 (Instr)


État 33

   49 Decl1: tId .
   50      | tId . tEq Expr

    tEq  décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 49 (Decl1)


État 34

   46 Decl: tInt DeclX . tPv

    tPv  décalage et aller à l'état 50


État 35

   47 DeclX: Decl1 .
   48      | Decl1 . tVir DeclX

    tVir  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 47 (DeclX)


État 36

   21 Invoc: tId tPo . Params tPf

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 22 (Params)

    Invoc   aller à l'état 44
    Params  aller à l'état 52
    Param   aller à l'état 53
    Expr    aller à l'état 54


État 37

   31 Affect: tId tEq . Expr tPv

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 55


État 38

   28 If: tIf tPo . Expr tPf Body
   29   | tIf tPo . Expr tPf Body tElse Body

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 56


État 39

   30 While: tWhile tPo . Expr tPf Body

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 57


État 40

   21 Invoc: tId . tPo Params tPf
   44 Expr: tId .

    tPo  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 44 (Expr)


État 41

   42 Expr: tPo . Expr tPf

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 58


État 42

   43 Expr: tNb .

    $défaut  réduction par utilisation de la règle 43 (Expr)


État 43

   33 Expr: tNot . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 59


État 44

   45 Expr: Invoc .

    $défaut  réduction par utilisation de la règle 45 (Expr)


État 45

   20 Ret: tReturn Expr . tPv
   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tEq    décalage et aller à l'état 60
    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tPv    décalage et aller à l'état 64
    tPipe  décalage et aller à l'état 65
    tAnd   décalage et aller à l'état 66
    tInf   décalage et aller à l'état 67
    tSup   décalage et aller à l'état 68
    tDiv   décalage et aller à l'état 69


État 46

   11 Body: tAo $@1 ListeInstr $@2 . tAf

    tAf  décalage et aller à l'état 70


État 47

   12 ListeInstr: Instr ListeInstr .

    $défaut  réduction par utilisation de la règle 12 (ListeInstr)


État 48

   18 Instr: Invoc tPv .

    $défaut  réduction par utilisation de la règle 18 (Instr)


État 49

   50 Decl1: tId tEq . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 71


État 50

   46 Decl: tInt DeclX tPv .

    $défaut  réduction par utilisation de la règle 46 (Decl)


État 51

   48 DeclX: Decl1 tVir . DeclX

    tId  décalage et aller à l'état 33

    DeclX  aller à l'état 72
    Decl1  aller à l'état 35


État 52

   21 Invoc: tId tPo Params . tPf

    tPf  décalage et aller à l'état 73


État 53

   23 Params: Param .
   24       | Param . tVir ParamNext

    tVir  décalage et aller à l'état 74

    $défaut  réduction par utilisation de la règle 23 (Params)


État 54

   27 Param: Expr .
   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tEq    décalage et aller à l'état 60
    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tPipe  décalage et aller à l'état 65
    tAnd   décalage et aller à l'état 66
    tInf   décalage et aller à l'état 67
    tSup   décalage et aller à l'état 68
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 27 (Param)


État 55

   31 Affect: tId tEq Expr . tPv
   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tEq    décalage et aller à l'état 60
    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tPv    décalage et aller à l'état 75
    tPipe  décalage et aller à l'état 65
    tAnd   décalage et aller à l'état 66
    tInf   décalage et aller à l'état 67
    tSup   décalage et aller à l'état 68
    tDiv   décalage et aller à l'état 69


État 56

   28 If: tIf tPo Expr . tPf Body
   29   | tIf tPo Expr . tPf Body tElse Body
   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tPf    décalage et aller à l'état 76
    tEq    décalage et aller à l'état 60
    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tPipe  décalage et aller à l'état 65
    tAnd   décalage et aller à l'état 66
    tInf   décalage et aller à l'état 67
    tSup   décalage et aller à l'état 68
    tDiv   décalage et aller à l'état 69


État 57

   30 While: tWhile tPo Expr . tPf Body
   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tPf    décalage et aller à l'état 77
    tEq    décalage et aller à l'état 60
    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tPipe  décalage et aller à l'état 65
    tAnd   décalage et aller à l'état 66
    tInf   décalage et aller à l'état 67
    tSup   décalage et aller à l'état 68
    tDiv   décalage et aller à l'état 69


État 58

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr
   42     | tPo Expr . tPf

    tPf    décalage et aller à l'état 78
    tEq    décalage et aller à l'état 60
    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tPipe  décalage et aller à l'état 65
    tAnd   décalage et aller à l'état 66
    tInf   décalage et aller à l'état 67
    tSup   décalage et aller à l'état 68
    tDiv   décalage et aller à l'état 69


État 59

   32 Expr: Expr . tPlus Expr
   33     | tNot Expr .
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    $défaut  réduction par utilisation de la règle 33 (Expr)


État 60

   39 Expr: Expr tEq . tEq Expr

    tEq  décalage et aller à l'état 79


État 61

   32 Expr: Expr tPlus . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 80


État 62

   36 Expr: Expr tLess . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 81


État 63

   38 Expr: Expr tStar . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 82


État 64

   20 Ret: tReturn Expr tPv .

    $défaut  réduction par utilisation de la règle 20 (Ret)


État 65

   40 Expr: Expr tPipe . tPipe Expr

    tPipe  décalage et aller à l'état 83


État 66

   41 Expr: Expr tAnd . tAnd Expr

    tAnd  décalage et aller à l'état 84


État 67

   34 Expr: Expr tInf . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 85


État 68

   35 Expr: Expr tSup . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 86


État 69

   37 Expr: Expr tDiv . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 87


État 70

   11 Body: tAo $@1 ListeInstr $@2 tAf .

    $défaut  réduction par utilisation de la règle 11 (Body)


État 71

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr
   50 Decl1: tId tEq Expr .

    tEq    décalage et aller à l'état 60
    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tPipe  décalage et aller à l'état 65
    tAnd   décalage et aller à l'état 66
    tInf   décalage et aller à l'état 67
    tSup   décalage et aller à l'état 68
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 50 (Decl1)


État 72

   48 DeclX: Decl1 tVir DeclX .

    $défaut  réduction par utilisation de la règle 48 (DeclX)


État 73

   21 Invoc: tId tPo Params tPf .

    $défaut  réduction par utilisation de la règle 21 (Invoc)


État 74

   24 Params: Param tVir . ParamNext

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc      aller à l'état 44
    ParamNext  aller à l'état 88
    Param      aller à l'état 89
    Expr       aller à l'état 54


État 75

   31 Affect: tId tEq Expr tPv .

    $défaut  réduction par utilisation de la règle 31 (Affect)


État 76

   28 If: tIf tPo Expr tPf . Body
   29   | tIf tPo Expr tPf . Body tElse Body

    tAo  décalage et aller à l'état 15

    Body  aller à l'état 90


État 77

   30 While: tWhile tPo Expr tPf . Body

    tAo  décalage et aller à l'état 15

    Body  aller à l'état 91


État 78

   42 Expr: tPo Expr tPf .

    $défaut  réduction par utilisation de la règle 42 (Expr)


État 79

   39 Expr: Expr tEq tEq . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 92


État 80

   32 Expr: Expr . tPlus Expr
   32     | Expr tPlus Expr .
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tStar  décalage et aller à l'état 63
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 32 (Expr)


État 81

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   36     | Expr tLess Expr .
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tStar  décalage et aller à l'état 63
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 36 (Expr)


État 82

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   38     | Expr tStar Expr .
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    $défaut  réduction par utilisation de la règle 38 (Expr)


État 83

   40 Expr: Expr tPipe tPipe . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 93


État 84

   41 Expr: Expr tAnd tAnd . Expr

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc  aller à l'état 44
    Expr   aller à l'état 94


État 85

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   34     | Expr tInf Expr .
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 34 (Expr)


État 86

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   35     | Expr tSup Expr .
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 35 (Expr)


État 87

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   37     | Expr tDiv Expr .
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    $défaut  réduction par utilisation de la règle 37 (Expr)


État 88

   24 Params: Param tVir ParamNext .

    $défaut  réduction par utilisation de la règle 24 (Params)


État 89

   25 ParamNext: Param .
   26          | Param . tVir ParamNext

    tVir  décalage et aller à l'état 95

    $défaut  réduction par utilisation de la règle 25 (ParamNext)


État 90

   28 If: tIf tPo Expr tPf Body .
   29   | tIf tPo Expr tPf Body . tElse Body

    tElse  décalage et aller à l'état 96

    $défaut  réduction par utilisation de la règle 28 (If)


État 91

   30 While: tWhile tPo Expr tPf Body .

    $défaut  réduction par utilisation de la règle 30 (While)


État 92

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   39     | Expr tEq tEq Expr .
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr

    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 39 (Expr)


État 93

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   40     | Expr tPipe tPipe Expr .
   41     | Expr . tAnd tAnd Expr

    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 40 (Expr)


État 94

   32 Expr: Expr . tPlus Expr
   34     | Expr . tInf Expr
   35     | Expr . tSup Expr
   36     | Expr . tLess Expr
   37     | Expr . tDiv Expr
   38     | Expr . tStar Expr
   39     | Expr . tEq tEq Expr
   40     | Expr . tPipe tPipe Expr
   41     | Expr . tAnd tAnd Expr
   41     | Expr tAnd tAnd Expr .

    tPlus  décalage et aller à l'état 61
    tLess  décalage et aller à l'état 62
    tStar  décalage et aller à l'état 63
    tDiv   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 41 (Expr)


État 95

   26 ParamNext: Param tVir . ParamNext

    tId   décalage et aller à l'état 40
    tPo   décalage et aller à l'état 41
    tNb   décalage et aller à l'état 42
    tNot  décalage et aller à l'état 43

    Invoc      aller à l'état 44
    ParamNext  aller à l'état 97
    Param      aller à l'état 89
    Expr       aller à l'état 54


État 96

   29 If: tIf tPo Expr tPf Body tElse . Body

    tAo  décalage et aller à l'état 15

    Body  aller à l'état 98


État 97

   26 ParamNext: Param tVir ParamNext .

    $défaut  réduction par utilisation de la règle 26 (ParamNext)


État 98

   29 If: tIf tPo Expr tPf Body tElse Body .

    $défaut  réduction par utilisation de la règle 29 (If)
